--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,102 @@
-.App {
-  text-align: center;
+#banner-image {
+  border: 1px solid #fff;
+  border-radius: 10px;
+  max-width: 600px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+[class^="block-"] {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  gap: 2vh;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  flex-direction: row;
 }
 
-.App-link {
-  color: #61dafb;
+[class^="box-"] {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.block-1.box-1 {
+  flex: auto;
+  text-align: left;
+  justify-content: left;
+}
+
+.block-2 {
+  justify-content: left;
+  align-items: left;
+}
+
+#city {
+  margin-top: 11px;
+  color: #202124;
+  font-size: 22px;
+  line-height: 26px;
+}
+
+.container {
+  display: flex;
+  max-width: 600px;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
+  flex-direction: column;
+}
+
+#current-description:first-letter {
+  text-transform: capitalize;
+}
+
+#current-temp {
+  font-size: 64px;
+  line-height: 1;
+  font-weight: 400;
+}
+
+#fahrenheit-link {
+  position: relative;
+  top: -14px;
+  color: #202124;
+  text-decoration: none;
+}
+
+.github {
+  max-width: 600px;
+  text-align: center;
+  display: block;
+  margin: 0% auto;
+}
+
+.github-link {
+  text-decoration: none;
+  font-size: 16px;
+  color: black;
+  text-align: center;
+  transition: all 200ms ease-in-out;
+}
+
+.github-link:hover {
+  color: purple;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+@media (max-width: 576px) {
+  .block-2 {
+    flex-direction: column;
+    height: 60vh;
   }
-  to {
-    transform: rotate(360deg);
+
+  .box-3 {
+    flex: 80%;
+  }
+  .box-4 {
+    height: 20vh;
   }
 }
