--- a/src/Search.css
+++ b/src/Search.css
@@ -1,3 +1,16 @@
-.form {
+form {
   text-align: center;
+}
+
+#current-temp {
+  font-size: 64px;
+  line-height: 1;
+  font-weight: 400;
+}
+
+#fahrenheit-link {
+  position: relative;
+  top: -34px;
+  color: #202124;
+  text-decoration: none;
 }
